--- a/chart/templates/events.html
+++ b/chart/templates/events.html
@@ -5,7 +5,7 @@
     <script src="/static/js/chart.js"></script>
     <script src="/static/js/datepicker-full.min.js"></script>
     <link rel="stylesheet" href="/static/css/datepicker.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">https://cdn.jsdelivr.net/npm/chart.js"https://cdn.jsdelivr.net/npm/chart.js"
 </head>
 <body>
   <form>
